# Memoir

./: .gitignore  AGENTS-memoir-template.md  CHANGELOG.md  DESIGN.md  STATUS.md  coding-agent-instructions.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
.memoir/: archive.md
design_handoff_memoir/: Memoir.html  README.md  app.jsx  data.jsx  detail-git-archive.jsx  detail.jsx  drawers.jsx  icons.jsx  overview.jsx  primitives.jsx  settings.jsx  styles.css
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  archive.rs  chats.rs  docs.rs  file_tree.rs  git.rs  lib.rs  main.rs  projects.rs  secrets.rs  settings.rs
src-tauri/src/db/: schema.sql
src/components/: AppIcon.tsx  Primitives.tsx
src/components/ui/: button.tsx
src/features/: Drawers.tsx  Overview.tsx  ProjectDetail.tsx  Settings.tsx
src/lib/: categories.ts  completeness.ts  database.ts  mock-data.ts  projects-api.ts  types.ts  utils.ts
src/store/: useMemoirStore.ts
src/styles/: app.css  tokens.css
